Billing Module under construction

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" />
 
 		<script type="text/javascript" src="./modules/billing/billing.client.module.js"></script>
+		<script type="text/javascript" src="./modules/billing/services/billing.client.service.js"></script>
 		<script type="text/javascript" src="./modules/billing/controllers/billing.client.controller.js"></script>
 		<script type="text/javascript" src="./modules/billing/config/billing.client.route.js"></script>
 
